// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-frontmatter.njk 1`] = `
---
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
---



`;

exports[`frontmatter-and-content-many-spaces.njk 1`] = `
---
layout: base
---





<h1>Hello world</h1>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
layout: base
---

<h1>Hello world</h1>

`;

exports[`frontmatter-and-content-no-space.njk 1`] = `
---
layout: base
---
<h1>Hello world</h1>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
layout: base
---

<h1>Hello world</h1>

`;

exports[`frontmatter-and-content-one-space.njk 1`] = `
---
layout: base
---

<h1>Hello world</h1>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
layout: base
---

<h1>Hello world</h1>

`;

exports[`frontmatter-and-text-content.njk 1`] = `
---
layout: base
---
Hello world
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
layout: base
---


Hello world

`;

exports[`not-frontmatter.njk 1`] = `

<span>Hello, world!</span>

<!-- Should not be formatted as frontmatter -->
---
name:               example
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span>Hello, world!</span>

<!-- Should not be formatted as frontmatter -->
--- name: example ---

`;

exports[`only-frontmatter.njk 1`] = `
---
layout:      layout
title: {Hello: World}
---
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
layout: layout
title: { Hello: World }
---



`;
